# observa

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/observa-cli/: Cargo.toml
crates/observa-cli/src/: main.rs
crates/observa-core/: Cargo.toml
crates/observa-core/src/: bar.rs  drawings.rs  events.rs  lib.rs  types.rs
crates/observa-data/: Cargo.toml
crates/observa-data/src/: csv_reader.rs  error.rs  lib.rs  validator.rs
crates/observa-engine/: Cargo.toml
crates/observa-engine/src/: engine.rs  error.rs  event_bus.rs  lib.rs  strategy.rs
crates/observa-execution/: Cargo.toml
crates/observa-execution/src/: error.rs  execution.rs  lib.rs
crates/observa-metrics/: Cargo.toml
crates/observa-metrics/src/: calmar.rs  drawdown.rs  equity_curve.rs  lib.rs  metrics.rs  sharpe.rs  trade_stats.rs
crates/observa-portfolio/: Cargo.toml
crates/observa-portfolio/src/: error.rs  lib.rs  portfolio.rs  position.rs
crates/observa-python/: Cargo.toml
crates/observa-python/src/: bar.rs  drawings.rs  error.rs  lib.rs  portfolio.rs  signal.rs  strategy.rs
crates/observa-runner/: Cargo.toml
crates/observa-runner/src/: main.rs
crates/observa-server/: Cargo.toml
crates/observa-server/src/: main.rs
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  EVENT_SCHEMAS.md  MVP_SCOPE.md  STRATEGY_API.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: charts.js  drawdown.js  events.js  helpers.js  investigation.js  main.js  panels.js  playback.js  state.js  themes.js
strategies/: ema_crossover.py  fvg_strategy.py
