[package]
name    = "observa-core"
version.workspace = true
edition.workspace = true

# Domain types and events shared across all crates.
# No dependencies on other Observa crates.

[dependencies]
chrono.workspace     = true
serde.workspace      = true
serde_json.workspace = true
uuid.workspace       = true
thiserror.workspace  = true
