[package]
name = "observa-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3"
observa-core = { path = "../observa-core" }
observa-data = { path = "../observa-data" }