[package]
name    = "observa-portfolio"
version = "0.1.0"
edition.workspace = "2021"

# Portfolio manager — capital, positions, PnL tracking.


[dependencies]
observa-core = { path = "../observa-core" }
chrono = {version = "0.4", features = ["serde"]}
thiserror.workspace = "1.0"
uuid = {version = "1.0", features = ["v4", "serde"]}
