[package]
name = "observa-python"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4"}
observa-core    = { path = "../observa-core" }
observa-engine  = { path = "../observa-engine" }