[package]
name = "observa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
observa-core      = { path = "../observa-core" }
observa-data      = { path = "../observa-data" }
observa-engine    = { path = "../observa-engine" }
observa-execution = { path = "../observa-execution" }
observa-portfolio = { path = "../observa-portfolio" }